--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
