--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
+    "date-fns": "^2.29.3",
+    "nanoid": "^4.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
