--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "private": true,
   "homepage": "https://KaterynaChernetska.github.io/SlimMom/",
   "dependencies": {
+    "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
+    "lodash.debounce": "^4.0.8",
+    "nanoid": "^4.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
-    "date-fns": "^2.29.3",
-    "nanoid": "^4.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
