--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "homepage": "https://KaterynaChernetska.github.io/SlimMom/",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.12",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^6.0.0",
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
@@ -12,6 +17,7 @@
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "formik-persist-values": "^1.4.1",
     "lodash.debounce": "^4.0.8",
@@ -27,6 +33,7 @@
     "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
+    "styled-components": "^5.3.8",
     "web-vitals": "^2.1.3",
     "yup": "^1.0.2"
   },
