--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.2.9",
     "formik-persist-values": "^1.4.1",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
