--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik-persist-values": "^1.4.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
