--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
