--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slimmom",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://KaterynaChernetska.github.io/SlimMom/",
+  "homepage": "https://nastya-koptilova.github.io/SlimMomApp/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
